# gr-labs

./: .gitignore
lab01/: CMakeLists.txt
lab01/common/: shader.h
lab01/lab01/: lab01.cpp  simple.fragmentshader  simple.vertexshader
lab02/: CMakeLists.txt
lab02/common/: shader.cpp  util.cpp  util.h
lab02/lab02/: lab02.cpp  simple.fragmentshader  transformation.vertexshader
lab03/: CMakeLists.txt
lab03/common/: ModelLoader.cpp  ModelLoader.h  camera.cpp  texture.h
lab03/lab03/: lab03.cpp  texture.fragmentshader  texture.vertexshader
lab04/: CMakeLists.txt
lab04/common/: ModelLoader.cpp  ModelLoader.h  camera.cpp  camera.h  texture.cpp  texture.h  util.h
lab04/lab04/: Shader.fragmentshader  Shader.vertexshader  lab.cpp
lab05/: CMakeLists.txt
lab05/common/: ModelLoader.cpp  ModelLoader.h  texture.cpp  util.cpp  util.h
lab05/lab05/: StandardShading.fragmentshader  StandardShading.vertexshader  lab.cpp
lab05_no2/: CMakeLists.txt
lab05_no2/common/: ModelLoader.cpp  ModelLoader.h  util.cpp  util.h
lab05_no2/lab05/: StandardShading.fragmentshader  lab.cpp
lab06/: CMakeLists.txt
lab06/common/: ModelLoader.cpp  ModelLoader.h  camera.cpp  camera.h  shader.cpp  skeleton.cpp  texture.cpp  util.cpp
lab06/lab06/: StandardShading.fragmentshader  StandardShading.vertexshader  lab.cpp
